@@ -1,23 +1,29 @@
 package org.bentech.service;
 
 import org.bentech.dto.UserDto;
-import org.bentech.entity.User;
+import org.bentech.entity.UserEntity;
 import org.bentech.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
-@Transactional
 public class UserService {
 
     @Autowired
     UserRepository userRepository;
 
-
     public List<UserDto> getAll() {
-        return userRepository.findAll().stream().map(User::toDto).toList();
+        return userRepository.findAll().stream().map(UserEntity::toDto).collect(Collectors.toList());
+    }
+
+    public UserDto getByUserName(String name) {
+        return userRepository.findByUserName(name).toDto();
+    }
+
+    public UserDto getById(Long id) {
+        return userRepository.findById(id).get().toDto();
     }
 }
